[build-system]
requires = ["setuptools"]

[project]
name = "nir"
version = "0.0.3"
description = "Neuromorphic Intermediate Representation"
authors = [
  { name = "Steven Abreu", email = "s.abreu@rug.nl" },
  { name = "Felix Bauer", email = "felix.bauer@synsense.ai" },
  { name = "Jason Eshraghian", email = "jeshragh@ucsc.edu" },
  { name = "Matthias Jobst", email = "matthias.jobst2@tu-dresden.de" },
  { name = "Gregor Lenz", email = "mail@lenzgregor.com" },
  { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" },
  { name = "Sadique Sheik", email = "sadique.sheik@synsense.ai" },
]
readme = "README.md"
keywords = ["neuromorphic", "intermediate", "representation"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [ "numpy", "h5py" ]

[project.urls]
homepage = "https://github.com/neuromorphs/nir"

[tool.setuptools.packages]
find = {} 

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E402"]
